--- a/package.json
+++ b/package.json
@@ -1,9 +1,31 @@
 {
   "name": "codit",
   "version": "1.0.0",
-  "description": "app vue del curso ow",
-  "author": "cisco",
-  "private": true,
+  "description": "A new way to discover github!",
+  "main": "",
+  "keywords": [
+    "github",
+    "discover"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "homepage": "",
+  "author": {
+    "name": "José Manuel Rosa Moncayo",
+    "email": "josemanuel.rosamoncayo@gmail.com"
+  },
+  "bugs": {
+    "url": "",
+    "email": "josemanuel.rosamoncayo@gmail.com"
+  },
+  "engines": {
+    "node": ">=8.4.0",
+    "npm": ">=5.3.0",
+    "yarn": ">=1.0.1"
+  },
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
@@ -14,7 +36,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "axios": "^0.16.2",
+    "vue": "^2.3.3",
+    "vue-router": "^2.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -67,7 +91,7 @@
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^10.0.0",
-    "pug": "^2.0.4",
+    "pug": "^2.0.0-rc.4",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
@@ -85,10 +109,6 @@
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
   },
   "browserslist": [
     "> 1%",
